--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -269,7 +269,7 @@ if(save_plots) {
 
 ### for each moment/scenario separately
 
-```{r 1-population-LDx++B, include=FALSE} 
+```{r 1-population-LDx++B, include=FALSE, message=FALSE, warning=FALSE} 
 
 for(i in 1:length(common_moments)) {
   
@@ -325,12 +325,6 @@ num_scenarios <- nrow(params_2_pops)
 
 # extracting names of moments
 stats_2_pops <- read.table("2-pops_scenario_1_final_unsorted.txt")[,1]
-suffixes <- c("A", "B", "X") # from sorting in moments++
-
-# convert to unsorted moments as presented in moments.LD
-for(i in 1:length(suffixes)) {
-  stats_2_pops <- str_remove(stats_2_pops, paste("_", suffixes[i], sep=""))
-}
 num_stats <- length(stats_2_pops)
 
 momspp <- as_tibble(matrix(nrow=num_scenarios, ncol=num_stats), .name_repair="unique")
@@ -382,32 +376,13 @@ dat_matched <- select(dat_matched, -c(sep_moments, matched_moments))
 
 write.table(dat_matched, "LD_++_2-pops.csv", sep=",", row.names=F, quote=F)
 
-# NOTE: log10 transform may throw away some Dz stats
-p <- ggplot(data=dat_matched,
-            aes(x=variable, y=value, shape=method, color=as.factor(scenario)))
-p <- p + geom_point(size=2) + theme_bw()
-p <- p + scale_shape_manual(values=c(1, 2))
-p <- p + labs(title="2-Pops moments++ (triangles) vs moments.LD (circles)",
-              x="Moment", y="Value")
-p <- p + scale_y_continuous(trans="log10")
-p <- p + theme(axis.title=element_text(size=12),
-               axis.text=element_text(size=10),
-               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
-               legend.position="none")
-print(p)
-
-if(save_plots) {
-  ggsave("moments++_vs_momentsLD_all_stats_2-pops.png",
-         p, device="png", width=12, height=12)
-}
-
 if(any(dat_matched$m_01 == 0)) {
   p <- ggplot(data=filter(dat_matched, m_01==0),
               aes(x=variable, y=value, shape=method, color=as.factor(scenario))) 
   p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~r)
   p <- p + scale_y_continuous(trans="log10")
   p <- p + scale_shape_manual(values=c(1, 2))
-  p <- p + labs(title = "Moments (m_01 == 0) x N_0 (rows) and r (cols)",
+  p <- p + labs(title = "Expectations (m_01 == 0) x N_0 (rows) and r (cols)",
                 x="Moment", y="Value", shape="Method", color="Scenario")
   p <- p + theme(axis.title=element_text(size=12),
                  axis.text=element_text(size=10),
@@ -416,7 +391,7 @@ if(any(dat_matched$m_01 == 0)) {
   print(p)
   
   if(save_plots) {
-    ggsave("moments++_vs_moments.LD_2-pops_m01_zero.png",
+    ggsave("expect_moments++_vs_moments.LD_2-pops_m01_zero.png",
            p, device="png", width=12, height=12)
   }
 }
@@ -427,7 +402,7 @@ if(any(dat_matched$m_01 > 0)) {
   p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~r)
   p <- p + scale_y_continuous(trans="log10")
   p <- p + scale_shape_manual(values=c(1, 2))
-  p <- p + labs(title="Moments (m_01 > 0) x N_0 (rows) and r (cols)",
+  p <- p + labs(title="Expectations (m_01 > 0) x N_0 (rows) and r (cols)",
                 x="Moment", y="Value", shape="Method", color="Scenario")
   p <- p + theme(axis.title=element_text(size=12),
                  axis.text=element_text(size=10), 
@@ -436,7 +411,7 @@ if(any(dat_matched$m_01 > 0)) {
   print(p)
   
   if(save_plots) {
-    ggsave("moments++_vs_moments.LD_2-pops_m01_non-zero.png",
+    ggsave("expect_moments++_vs_moments.LD_2-pops_m01_non-zero.png",
            p, device="png", width=12, height=12)
   }
 }
@@ -447,7 +422,7 @@ if(any(dat_matched$r == 0)) {
   p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~m_01)
   p <- p + scale_y_continuous(trans="log10")
   p <- p + scale_shape_manual(values=c(1, 2))
-  p <- p + labs(title = "Moments (r == 0) x N_0 (rows) and m_01 (cols)",
+  p <- p + labs(title = "Expectations (r == 0) x N_0 (rows) and m_01 (cols)",
                 x="Moment", y="Value", shape="Method", color="Scenario")
   p <- p + theme(axis.title=element_text(size=12),
                  axis.text=element_text(size=10),
@@ -456,7 +431,7 @@ if(any(dat_matched$r == 0)) {
   print(p)
   
   if(save_plots) {
-    ggsave("moments++_vs_moments.LD_2-pops_r_zero.png",
+    ggsave("expect_moments++_vs_moments.LD_2-pops_r_zero.png",
            p, device="png", width=12, height=12)
   }
 }
@@ -467,7 +442,7 @@ if(any(dat_matched$r > 0)) {
   p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~m_01)
   p <- p + scale_y_continuous(trans="log10")
   p <- p + scale_shape_manual(values=c(1, 2))
-  p <- p + labs(title="Moments (r > 0) x N_0 (rows) and m_01 (cols)",
+  p <- p + labs(title="Expectations (r > 0) x N_0 (rows) and m_01 (cols)",
                 x="Moment", y="Value", shape="Method", color="Scenario")
   p <- p + theme(axis.title=element_text(size=12),
                  axis.text=element_text(size=10), 
@@ -476,7 +451,90 @@ if(any(dat_matched$r > 0)) {
   print(p)
   
   if(save_plots) {
-    ggsave("moments++_vs_moments.LD_2-pops_r_non-zero.png",
+    ggsave("expect_moments++_vs_moments.LD_2-pops_r_non-zero.png",
+           p, device="png", width=12, height=12)
+  }
+}
+
+# visualizing the relative difference in each moment
+diff <- (filter(full_tbl, method=="moments++") %>% select(common_moments) - 
+         filter(full_tbl, method=="moments.LD") %>% select(common_moments)) / 
+         filter(full_tbl, method=="moments.LD") %>% select(common_moments) 
+
+diff_tbl <- bind_cols(diff, select(filter(full_tbl, method=="moments++"),
+                                   -common_moments)) %>% select(-c("method",
+                                                                   "sep_moments"))
+
+dat_diff <- pivot_longer(diff_tbl, cols=all_of(common_moments), names_to="variable") 
+
+if(any(dat_diff$m_01 == 0)) {
+  p <- ggplot(data=filter(dat_diff, m_01==0),
+              aes(x=variable, y=value, color=as.factor(scenario))) 
+  p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~r)
+  p <- p + labs(title = "Rel. diff. (m_01 == 0) x N_0 (rows) and r (cols)",
+                x="Moment", y="Value", color="Scenario")
+  p <- p + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10),
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+  print(p)
+  
+  if(save_plots) {
+    ggsave("diff_moments++_vs_moments.LD_2-pops_m01_zero.png",
+           p, device="png", width=12, height=12)
+  }
+}
+
+if(any(dat_diff$m_01 > 0)) {
+  p <- ggplot(data=filter(dat_diff, m_01 > 0),
+              aes(x=variable, y=value, color=as.factor(scenario))) 
+  p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~r)
+  p <- p + labs(title="Rel. diff. (m_01 > 0) x N_0 (rows) and r (cols)",
+                x="Moment", y="Value", color="Scenario")
+  p <- p + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10), 
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+  print(p)
+  
+  if(save_plots) {
+    ggsave("diff_moments++_vs_moments.LD_2-pops_m01_non-zero.png",
+           p, device="png", width=12, height=12)
+  }
+}
+
+if(any(dat_diff$r == 0)) {
+  p <- ggplot(data=filter(dat_diff, r==0),
+               aes(x=variable, y=value, color=as.factor(scenario))) 
+  p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~m_01)
+  p <- p + labs(title = "Rel. diff. (r == 0) x N_0 (rows) and m_01 (cols)",
+                x="Moment", y="Value", color="Scenario")
+  p <- p + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10),
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+  print(p)
+  
+  if(save_plots) {
+    ggsave("diff_moments++_vs_moments.LD_2-pops_r_zero.png",
+           p, device="png", width=12, height=12)
+  }
+}
+
+if(any(dat_diff$r > 0)) {
+  p <- ggplot(data=filter(dat_diff, r > 0),
+              aes(x=variable, y=value, color=as.factor(scenario))) 
+  p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~m_01)
+  p <- p + labs(title="Rel. diff. (r > 0) x N_0 (rows) and m_01 (cols)",
+                x="Moment", y="Value", shape="Method", color="Scenario")
+  p <- p + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10), 
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+  print(p)
+  
+  if(save_plots) {
+    ggsave("diff_moments++_vs_moments.LD_2-pops_r_non-zero.png",
            p, device="png", width=12, height=12)
   }
 }
