--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -4,6 +4,7 @@ Dependencies:
 - The Boost C++ libraries >= 1.71, available in https://www.boost.org/
 - The Threads library (usually provided along with the C++ compiler installation)
 - The Bio++ libraries >= 3.0 (bpp-core, bpp-seq, bpp-phyl), available in https://github.com/BioPP
+- The Eigen3 libraries, available at https://eigen.tuxfamily.org/dox/GettingStarted.html
 - The yaml-cpp library (https://github.com/jbeder/yaml-cpp)
 
 Installation using an external build:
