--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -104,7 +104,7 @@ id=1 # line counter, scenario_id
 
 # Running moments.LD
 
-```{python run-momentsLD, include=TRUE}
+```{python run-momentsLD, include=FALSE}
 
 import moments.LD
 import numpy as np
