--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -21,7 +21,7 @@ use_python("/usr/bin/python3")
 
 knitr::opts_knit$set(root.dir="~/Devel/momentspp/benchmarking/")
 
-save_plots <- TRUE # should this script ggsave plots to root.dir?
+save_plots <- FALSE # should this script ggsave plots to root.dir?
 ```
 
 # Setting up scenarios to test (parameter combinations)
@@ -48,7 +48,7 @@ N_0 <- c(1e+4, 1e+5)
 N_1 <- c(1e+5)
 m_01 <- c(0, 1e-5)
 m_10 <- c(1e-6, 1e-5)
-num_epochs <- c(1)
+num_epochs <- c(1, 2)
 
 num_gen_epoch_2 <- 5000
 N_0_epoch_2 <- N_0 / 10
@@ -377,6 +377,49 @@ dat_matched <- arrange(dat_matched, scenario, matched_moments)
 dat_matched <- select(dat_matched, -c(sep_moments, matched_moments))
 
 write.table(dat_matched, "LD_++_2-pops.csv", sep=",", row.names=F, quote=F)
+
+if(var(dat_matched$num_epochs) > 0) {
+  p <- ggplot(data=dat_matched,
+              aes(x=variable, y=value, shape=method, color=as.factor(num_epochs))) 
+  p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~r)
+  p <- p + scale_y_continuous(trans="log10")
+  p <- p + scale_shape_manual(values=c(1, 2))
+  p <- p + labs(title = "Expectations x N_0 (rows) and r (cols)",
+                x="Moment", y="Value", shape="Method", color="# Epochs")
+  p <- p + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10),
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+  print(p)
+  
+  if(save_plots) {
+    ggsave("expect_moments++_vs_moments.LD_2-pops~num_epochs.png",
+           p, device="png", width=7, height=7)
+  }
+    
+  vals <- unique(dat_matched$num_epochs)
+  
+  for(i in vals) {
+    p <- ggplot(data=filter(dat_matched, num_epochs==vals[i]),
+                aes(x=variable, y=value, shape=method, color=as.factor(scenario))) 
+    p <- p + geom_point(size=2) + theme_bw() + facet_grid(N_0~r)
+    p <- p + scale_y_continuous(trans="log10")
+    p <- p + scale_shape_manual(values=c(1, 2))
+    p <- p + labs(title=paste("Expectations (# epochs == ", vals[i], 
+                  ") x N_0 (rows) and r (cols)", sep = ""),
+                  x="Moment", y="Value", shape="Method", color="Scenario")
+    p <- p + theme(axis.title=element_text(size=12),
+                   axis.text=element_text(size=10),
+                   axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                   legend.position="bottom")
+    print(p)
+  
+    if(save_plots) {
+      ggsave(paste("expect_moments++_vs_moments.LD_2-pops_", vals[i],
+                   "epochs.png", sep=""), p, device="png", width=7, height=7)
+    }
+  }
+}
 
 if(any(dat_matched$m_01 == 0)) {
   p <- ggplot(data=filter(dat_matched, m_01==0),
